appId: com.testengtakehome.app
---
- evalScript: ${output.counter = 0}
- repeat:
    while:
      true: ${output.counter < 5}
    commands:
      - tapOn:
          text: ${LETTER}
          index: ${output.counter}
      - evalScript: ${output.counter = output.counter + 1}

- tapOn: ${output.wordGameScreen.submitBtn}

- evalScript: ${output.counter = 0}
- repeat:
    while:
      true: ${output.counter < 6}
    commands:
      - assertVisible:
          text: ${LETTER}
          index: ${output.counter}
      - evalScript: ${output.counter = output.counter + 1}

# assert lose status
#- assertVisible: ${output.wordGameScreen.gameLosMsg}
#- assertVisible: ${output.wordGameScreen.answer}
#- assertVisible: ${output.wordGameScreen.playAgainBtn}
#- tapOn: ${output.wordGameScreen.playAgainBtn}

# assert win status
#- assertVisible: ${output.wordGameScreen.gameWinMsg}
#- assertVisible: ${output.wordGameScreen.answer}
#- assertVisible: ${output.wordGameScreen.playAgainBtn}
#- tapOn: ${output.wordGameScreen.playAgainBtn}